# Raysim

./: .clang-tidy  .gitignore  .gitmodules  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.es.md  README.md  vcpkg.json
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  dependency-review.yml  quality.yml  release.yml  update-vcpkg-baseline.yml
cmake/: CompilerFlags.cmake  CompilerWarnings.cmake  Coverage.cmake  GlobalSettings.cmake  Helpers.cmake  LOT.cmake  LTO.cmake  PlatformDetection.cmake  ProjectOptions.cmake  RDynamic.cmake  Sanitizers.cmake  StandardSettings.cmake  ThirdParty.cmake  Utils.cmake
cmake/Backends/: BackendRegistry.cmake  glfw_opengl.cmake  raylib.cmake
cmake/compiler/: CompilerOptimization.cmake  CompilerOptions.cmake  CompilerWarnings.cmake
cmake/imgui_backends/: imgui_glfw.cmake  imgui_raylib.cmake
cmake/modules/: Glad.cmake  ImGui.cmake  add_glad.cmake  add_imgui.cmake  add_spdlog.cmake  add_stb.cmake
docs/: ARCHITECTURE.es.md  ARCHITECTURE.md  BACKENDS.md  CHANGELOG.md  EXAMPLES.md  REQUIREMENTS.md
examples/: CMakeLists.txt  main.cpp
examples/BouncingBalls/: CMakeLists.txt  example_ball.cpp  example_ball.hpp  example_helpers.cpp  example_helpers.hpp  main.cpp
examples/Bouncing_Balls/: main.cpp
examples/LissajousCurves/: CMakeLists.txt  LissajousSimulation.cpp  LissajousSimulation.hpp  LissajousTypes.hpp  Readme.md  main.cpp
examples/Lissajous_Curves/: LISSAJOUS_CURVES.md  main.cpp
examples/Mouse2D/: CMakeLists.txt  example_layers.cpp  example_layers.hpp  main.cpp
examples/Mouse_detection_2D/: main.cpp
examples/NoiseLandscape/: CMakeLists.txt  SkyLayer.cpp  SkyLayer.hpp  TerrainLayer.cpp  TerrainLayer.hpp  main.cpp
examples/SceneShowcase/: CMakeLists.txt  ClockMandala.cpp  ClockMandala.hpp  PlasmaArt.cpp  PlasmaArt.hpp  SceneNavLayer.hpp  StarField.cpp  StarField.hpp  main.cpp
include/Backend/: BackendKeyMapTemplate.hpp
include/Backend/Raylib/: RaylibFontRenderer.hpp  RaylibImGuiBackend.hpp  RaylibInput.hpp  RaylibKeyMap.hpp  RaylibRendererAPI.hpp  RaylibTexture.hpp  RaylibWindow.hpp
include/Raysim/: Events.hpp  Fonts.hpp  Graphics.hpp  Inputs.hpp  Layers.hpp  Math.hpp  Raysim.hpp  Scenes.hpp
include/Raysim/Backend/Raylib/: RaylibInput.hpp  RaylibRenderer.hpp  RaylibRendererAPI.hpp  RaylibWindow.hpp
include/Raysim/Core/: Application.hpp  ApplicationConfig.hpp  Assert.hpp  BackendFactory.hpp  BackendType.hpp  Base.hpp  Canvas.hpp  EngineContext.hpp  EntryPoint.hpp  Enums.hpp  Layer.hpp  LayerStack.hpp  Log.hpp  Logger.hpp  Memory.hpp  PlatformDetection.hpp  Time.hpp  Window.hpp  WindowProperties.hpp
include/Raysim/Debug/: Instrumentor.hpp
include/Raysim/Events/: Event.hpp  EventBus.hpp  Events.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
include/Raysim/Fonts/: FontManager.hpp  Fonts.hpp
include/Raysim/Fonts/Providers/: STBTrueTypeProvider.hpp  TrueTypeProvider.hpp
include/Raysim/Fonts/Rendering/: FontRenderer.hpp
include/Raysim/Fonts/Types/: Font.hpp  FontAtlas.hpp  FontMetrics.hpp  FontTypes.hpp  Glyph.hpp
include/Raysim/Graphics/: Color.hpp  Color.inl  FontManager.hpp  OriginMode.hpp  Shapes.hpp  Texts.hpp  Texture.hpp
include/Raysim/ImGui/: ImGuiBackend.hpp  ImGuiLayer.hpp  ImGuiStyles.hpp
include/Raysim/Input/: EventDrivenInput.hpp  GamepadCodes.hpp  Input.hpp  InputManager.hpp  KeyCodes.hpp  MouseCodes.hpp
include/Raysim/Interfaces/: IInput.hpp  IRenderer.hpp  IWindow.hpp
include/Raysim/Manager/: FontManager.hpp  TimeManager.hpp
include/Raysim/Math/: Constants.hpp  Math.hpp  MathUtils.hpp  Random.hpp  Vector.hpp  Vector2.hpp  Vector2Int.hpp  Vector3.hpp  Vector3Int.hpp
include/Raysim/Math/Types/: Angle.hpp  Angle.inl  Types.hpp  Vec2.hpp  Vec2.inl  Vec2i.hpp  Vec2u.hpp  Vec2u16.hpp  Vec3.hpp  Vec3.inl  Vec3i.hpp  Vector2.hpp  Vector2.inl  Vector3.hpp  Vector3.inl
include/Raysim/Math/Utils/: MathUtils.hpp  MathUtils.inl
include/Raysim/Renderer/: GraphicsContext.hpp  RenderCommand.hpp  RendererAPI.hpp
include/Raysim/Scene/: Scene.hpp  SceneManager.hpp
include/Raysim/Utils/: Assert.hpp  Log.hpp  Memory.hpp  PathUtils.hpp  SystemUtils.hpp
scripts/: setup_env.ps1  setup_env.sh
src/: CMakeLists.txt  Canvas.cpp  Color.cpp  FontManager.cpp  Log.cpp  pch.hpp  rspch.hpp
src/Backend/Raylib/: RaylibFontRenderer.cpp  RaylibImGuiBackend.cpp  RaylibInput.cpp  RaylibRenderer.cpp  RaylibRendererAPI.cpp  RaylibTexture.cpp  RaylibWindow.cpp
src/Core/: Application.cpp  BackendFactory.cpp  Canvas.cpp  FontManager.cpp  LayerStack.cpp  Log.cpp  Logger.cpp  Time.cpp
src/Debug/: Instrumentor.cpp
src/Fonts/: FontManager.cpp
src/Fonts/Providers/: STBTrueTypeProvider.cpp
src/Graphics/: Color.cpp  Shapes.cpp  Texts.cpp
src/ImGui/: ImGuiLayer.cpp
src/Input/: EventDrivenInput.cpp
src/Manager/: FontManager.cpp  InputManager.cpp  TimeManager.cpp
src/Math/: Random.cpp
src/Renderer/: RenderCommand.cpp
src/Scene/: Scene.cpp  SceneManager.cpp
src/Utils/: Log.cpp  PathUtils.cpp
tools/: init_vcpkg.ps1  init_vcpkg.sh  install_precommit.py  setup_all.ps1  setup_all.sh  setup_python_env.py
